demo-service/k8s/simple-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo
  namespace: simple-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo
  sessionAffinity: None
  type: ClusterIP
