demo-service/k8s/alive.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alive-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo-alive
  namespace: alive-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo-alive
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo-alive
    spec:
      containers:
      - image: host.javaansehz.cloud:5555/demo:latest
        name: rancher-demo-alive
        ports:
          - containerPort: 8080
            name: app-port
          - containerPort: 9000
            name: actuator-port
        livenessProbe:
          httpGet:
            path: /actuator/alive
            port: actuator-port
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: actuator-port
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-alive
  namespace: alive-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo-alive
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo-alive
  namespace: alive-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devcloud.javaansehz.cloud
    http:
      paths:
      - path: /alive/(.*)$
        backend:
          serviceName: rancher-demo-alive
          servicePort: 80
