demo-service/k8s/autoscaling.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: autoscaling-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo-scale
  namespace: autoscaling-ns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo-scale
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo-scale
    spec:
      containers:
      - image: host.javaansehz.cloud:5555/demo:latest
        name: rancher-demo-scale
        resources:
          limits:
            cpu: "400m"
          requests:
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-scale
  namespace: autoscaling-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo-scale
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo-scale
  namespace: autoscaling-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devcloud.javaansehz.cloud
    http:
      paths:
      - path: /autoscaling/(.*)$
        backend:
          serviceName: rancher-demo-scale
          servicePort: 80
