demo-service/k8s/simple-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  namespace: simple-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devcloud.javaansehz.cloud
    http:
      paths:
      - path: /simple/(.*)$
        backend:
          serviceName: rancher-demo
          servicePort: 80
