demo-service/k8s/simple.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: simple-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
  namespace: simple-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo
    spec:
      containers:
      - image: host.javaansehz.cloud:5555/demo:latest
        name: rancher-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo
  namespace: simple-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  namespace: simple-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devcloud.javaansehz.cloud
    http:
      paths:
      - path: /simple/(.*)$
        backend:
          serviceName: rancher-demo
          servicePort: 80
